# felitronics-appkit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/felitronics/appkit/: AudioSettingsPanel.h  Brand.h  BrandHeader.h  CallOut.h  CompareHistory.h  DbGradient.h  DeviceGlyph.h  DeviceSpec.h  Download.h  Flicker.h  IconButton.h  LevelHistory.h  LevelMeter.h  NotifyPing.h  PerfBadge.h  SettingsStore.h  TextPrompt.h  UpdateChecker.h  UpdateCompare.h  VersionBadge.h
include/felitronics/appkit/chrome/: BrandBlister.h  ChromeBar.h  ChromeMetrics.h  ChromeUnderline.h  CompareCell.h  FlatButtons.h  PresetCell.h
tests/: BadgesFalsifyTests.cpp  BrandFalsifyTests.cpp  ChromeFalsifyTests.cpp  ChromeMinimalConsumer.cpp  CompareHistoryTests.cpp  ConsumerCompileCheck.cpp  DeviceGlyphFalsifyTests.cpp  DeviceSpecTests.cpp  DeviceSpecTheoryTests.cpp  FlickerTheoryTests.cpp  IconButtonFalsifyTests.cpp  LevelHistoryFalsifyTests.cpp  LevelMeterFalsifyTests.cpp  LevelMeterTheoryTests.cpp  UpdateCheckerFalsifyTests.cpp  UpdateCompareFalsifyTests.cpp  UpdateCompareTests.cpp
tests/chrome_selfcontained/: BrandBlister.cpp  ChromeBar.cpp  ChromeMetrics.cpp  ChromeUnderline.cpp  CompareCell.cpp  FlatButtons.cpp  PresetCell.cpp  main.cpp
